src/objects/ExperiencePackage__c.object
<CustomObject>
    <description>New object for Kevin and Dave, to track Experience packages + costing</description>
    <fields>
        <fullName>Cost_of_Related_Applications__c</fullName>
        <inlineHelpText>Sum of Royalty Current of all related Applications listed below (in related list)</inlineHelpText>
        <label>Cost of Related Applications</label>
        <summarizedField>ExperiencePackage_App__c.Royalty_Current__c</summarizedField>
        <summaryForeignKey>ExperiencePackage_App__c.Experience_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cost_of_Related_SW_Components_CWV__c</fullName>
        <label>Cost of Related SW Components (CWV)</label>
        <summarizedField>ExperiencePackage_Component__c.Cost_CWV__c</summarizedField>
        <summaryFilterItems>
            <field>ExperiencePackage_Component__c.Component_Type__c</field>
            <operation>equals</operation>
            <value>SW</value>
        </summaryFilterItems>
        <summaryForeignKey>ExperiencePackage_Component__c.Experience_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cost_of_Related_SW_Components_Opp__c</fullName>
        <label>Cost of Related SW Components (Opp)</label>
        <summarizedField>ExperiencePackage_Component__c.Cost_Opp__c</summarizedField>
        <summaryFilterItems>
            <field>ExperiencePackage_Component__c.Component_Type__c</field>
            <operation>equals</operation>
            <value>SW</value>
        </summaryFilterItems>
        <summaryForeignKey>ExperiencePackage_Component__c.Experience_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ExpPack_POR_Status__c</fullName>
        <label>ExpPack POR Status</label>
        <picklist>
            <picklistValues>
                <fullName>IN - Fully approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cond IN - Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D - Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OUT - Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOL - End-Of-Life, no longer supported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Experience_Description__c</fullName>
        <label>Experience Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Experience_Description_text__c</fullName>
        <label>Experience Description_text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Experience_Details__c</fullName>
        <inlineHelpText>Experience detail deck (URL)</inlineHelpText>
        <label>Experience Details</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <description>Concatenation of Name + Year + Variant</description>
        <formula>Name &amp;&quot;-&quot;&amp; Year__c &amp;&quot;-&quot;&amp; text(Variant__c)</formula>
        <inlineHelpText>Concatenation of Name + Year + Variant</inlineHelpText>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HW_Costs_CWV__c</fullName>
        <inlineHelpText>Includes all HW Components listed below</inlineHelpText>
        <label>HW Costs (CWV)</label>
        <summarizedField>ExperiencePackage_Component__c.Cost_CWV__c</summarizedField>
        <summaryFilterItems>
            <field>ExperiencePackage_Component__c.Component_Type__c</field>
            <operation>equals</operation>
            <value>HW</value>
        </summaryFilterItems>
        <summaryForeignKey>ExperiencePackage_Component__c.Experience_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>HW_Costs_Opp__c</fullName>
        <inlineHelpText>Includes all HW Components listed below</inlineHelpText>
        <label>HW Costs (Opp)</label>
        <summarizedField>ExperiencePackage_Component__c.Cost_Opp__c</summarizedField>
        <summaryFilterItems>
            <field>ExperiencePackage_Component__c.Component_Type__c</field>
            <operation>equals</operation>
            <value>HW</value>
        </summaryFilterItems>
        <summaryForeignKey>ExperiencePackage_Component__c.Experience_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Marketing_Message__c</fullName>
        <label>Marketing Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Platform_Assumptions__c</fullName>
        <label>Other Platform Assumptions</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Area__c</fullName>
        <label>Product Area</label>
        <picklist>
            <picklistValues>
                <fullName>Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core + Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mind Reader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wearables</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SW_Costs_CWV__c</fullName>
        <formula>Cost_of_Related_Applications__c +  Cost_of_Related_SW_Components_CWV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Includes all SW Components listed below, plus all related Applications listed below</inlineHelpText>
        <label>SW Costs (CWV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SW_Costs_Opp__c</fullName>
        <formula>Cost_of_Related_Applications__c +  Cost_of_Related_SW_Components_Opp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Includes all SW Components listed below, plus all related Applications listed below</inlineHelpText>
        <label>SW Costs (Opp)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SW_Product_Manager_Text__c</fullName>
        <formula>SW_Product_Manager__r.DisplayLastName__c</formula>
        <label>SW Product Manager Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_Product_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SW Product Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Motorola_Core_Directory__c.DirectoryStatus__c</field>
                <operation>equals</operation>
                <value>A</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>ExperiencePackages</relationshipLabel>
        <relationshipName>ExperiencePackages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Cost_CWV__c</fullName>
        <formula>HW_Costs_CWV__c +  SW_Costs_CWV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of HW + SW costs (CWV)</inlineHelpText>
        <label>Total Cost (CWV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Opp__c</fullName>
        <formula>HW_Costs_Opp__c +  SW_Costs_Opp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of HW + SW costs (Opp)</inlineHelpText>
        <label>Total Cost (Opp)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variant__c</fullName>
        <inlineHelpText>Used to distinguish variants of same ExperiencePackage (ie. China vs ROW)</inlineHelpText>
        <label>Variant</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>ExperiencePackage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Variant__c</columns>
        <columns>Year__c</columns>
        <columns>Experience_Description__c</columns>
        <columns>ExpPack_POR_Status__c</columns>
        <columns>SW_Product_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ExperiencePackage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExperiencePackages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>